--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -5,7 +5,18 @@
 #
 # Remove leading # and set to the amount of RAM for the most important data
 # cache in MySQL. Start at 70% of total RAM for dedicated server, else 10%.
-innodb_buffer_pool_size = 200M
+max_connections=100
+
+innodb_sort_buffer_size=5M
+
+innodb_log_files_in_group=2
+innodb_log_file_size=1024M
+
+innodb_buffer_pool_size=200M
+innodb_buffer_pool_instances=1
+innodb_io_capacity=100
+innodb_io_capacity_max=400
+
 skip-host-cache
 skip-name-resolve
 datadir=/var/lib/mysql
