--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,5 +7,11 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mydatabase?serverTimezone=UTC&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: verysecret
+    username: myuser
+    password: secret
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
